--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -61,7 +61,7 @@
 
                                     </li>
                                     <li>
-                                        <strong>Location:<br><small>Latitude: {{ object.location.0 }}<br> Longitude: {{object.location.1}}</bold></small></strong>
+                                        <strong>Location:<br><small>Latitude: {{ object.location.x }}<br> Longitude: {{object.location.y }}</bold></small></strong>
                                         <br>
 
                                     </li>
