--- a/survey/core/templates/core/site_create.html
+++ b/survey/core/templates/core/site_create.html
@@ -7,6 +7,11 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">{% if request.user.is_superuser %}
                     <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
+                    {% else %}
+                    <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a></li>
+                    {% endif %}
+                    {% if object %}
+                    <li class="breadcrumb-item"><a href="{% url 'core:site_detail' object.pk %}">{{ object }}</a></li>
                     {% endif %}
                     <li class="breadcrumb-item active" aria-current="page">Site Form</li>
                 </ol>
