--- a/survey/core/templates/core/sitematerials_list.html
+++ b/survey/core/templates/core/sitematerials_list.html
@@ -3,9 +3,10 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">{% if request.user.is_superuser %}
             <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
-
-        {% endif %}
-                    <li class="breadcrumb-item"><a href="{% url 'core:site_detail' site.pk %}">{{ site }}</a></li>
+        {% else %}
+            <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' site.project.pk %}">Dashboard</a></li>
+            {% endif %}
+            <li class="breadcrumb-item"><a href="{% url 'core:site_detail' site.pk %}">{{ site }}</a></li>
 
             <li class="breadcrumb-item active" aria-current="page"> Site Guideline List</li>
         </ol>
