--- a/survey/userrole/templates/userrole/userrole_form.html
+++ b/survey/userrole/templates/userrole/userrole_form.html
@@ -7,8 +7,10 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">{% if request.user.is_superuser %}
                     <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
-
+                    {% else %}
+                    <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a></li>
                     {% endif %}
+                    <li class="breadcrumb-item"><a href="{% url 'core:site_detail' site.pk %}">{{site}}</a></li>
                     <li class="breadcrumb-item active" aria-current="page">People</li>
                 </ol>
             </nav>
