--- a/survey/core/templates/core/dashboard.html
+++ b/survey/core/templates/core/dashboard.html
@@ -60,10 +60,19 @@
                         <div class="col-md-6">
                             <div class="widget-info margin-top-large">
                                 <div class="widget-head">
-                                    <h4><a href="#" title="">Manage User</a></h4> <a href="{% url 'core:user_create'%}" title="" class="btn btn-sm btn-xs btn-primary"><i
+                                    <h4><a href="#" title="">Manage User</a></h4>
+                                    <h4><a href="#" title="">Manage User</a></h4> <a href="{% url 'core:user_list'%}" title="" class="btn btn-sm btn-xs btn-primary"><i
+                                        class="la la-caret-right"></i> More </a>
+                                    <a href="{% url 'core:user_create'%}" title="" class="btn btn-sm btn-xs btn-primary"><i
                                         class="la la-caret-right"></i> Create User</a>
+
                                 </div>
                                 <div class="widget-body">
+
+                                    {% for user in users %}
+                                         {{ forloop.counter }}. {{ user }}<br>
+                                    {% endfor %}
+
 
                                 </div>
                             </div>
