--- a/survey/core/templates/core/site_create.html
+++ b/survey/core/templates/core/site_create.html
@@ -2,7 +2,6 @@
 
 {% block content %}
 
-    <div class="row no-gutters">
         <div class="col-md-12">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">{% if request.user.is_superuser %}
@@ -18,13 +17,10 @@
             </nav>
         </div>
 
-        <div class="col-md-8 col-lg-9">
-            <div class="dash-left">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="widget-info margin-top-large">
-
-                            <div class="widget-head">
+       <div class="d-flex justify-content-center">
+        <div class="col-md-1 col-lg-7">
+            <div class="dash-right">
+                <div class="widget-info margin-top-large">
                                 <form method="post" enctype="multipart/form-data">{% csrf_token %}
                                     {{ form.media }}
                                     {{ form.as_p }}
@@ -35,9 +31,5 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
 {% endblock content %}
