--- a/survey/templates/registration/signup.html
+++ b/survey/templates/registration/signup.html
@@ -2,7 +2,6 @@
 
 {% block content %}
 
-    <div class="row no-gutters">
         <div class="col-md-12">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">{% if request.user.is_superuser %}
@@ -13,47 +12,19 @@
                 </ol>
             </nav>
         </div>
-        <div class="col-md-4 col-lg-3">
-            <div class="module-school-list">
-                <div class="school-wrap">
-                    <ul class="school-list">
-                        {% if request.user.is_superuser %}
-                            {% for project in projects %}
-                                <li>
-                                    <a href="{% url 'core:project_dashboard' project.pk %}" title="">
-                                        <img src="{{ MEDIA_URL }}{{ project.logo }}" class="project-logo" alt="">
-                                        <h6>{{ project }}</h6>
-                                        <span>{{ project.address }}</span>
-                                    </a>
-                                </li>{% endfor %}{% else %}
-                                {% for site in project.sites.all %}
-                                    <li>
-                                        <a href="{% url 'core:site_detail' site.pk %}" title="">
-                                            <img src="assets/img/img-school.png" class="school-logo" alt="">
-                                            <h6>{{ site }}</h6>
-                                            <span>{{ site.address }}</span>
-                                        </a>
-                                    </li>{% endfor %}
-                        {% endif %}
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-8 col-lg-9">
-            <div class="dash-left">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="widget-info margin-top-large">
+
+        <div class="d-flex justify-content-center">
+        <div class="col-md-3 col-lg-6">
+            <div class="dash-right">
+                <div class="widget-info margin-top-large">
                            <form action="" method="post">{% csrf_token %}
                         {{ form.as_p }}
-                        <input type="submit">
+                        <input type="submit" class="btn btn-primary">
                     </form>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
 
 {% endblock content %}
 
