--- a/survey/core/templates/core/material_detail.html
+++ b/survey/core/templates/core/material_detail.html
@@ -2,62 +2,65 @@
 
 {% block content %}
 
-    <div class="row no-gutters">
-        <div class="col-md-12">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">{% if request.user.is_superuser %}
-                    <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
+<div class="row no-gutters">
+    <div class="col-md-12">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">{% if request.user.is_superuser %}
+                <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
                 {% else %}
-                    <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a>
-                    </li>
+                <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a>
+                </li>
                 {% endif %}
-                    <li class="breadcrumb-item active" aria-current="page">{{ object }} Detail</li>
-                </ol>
-            </nav>
-        </div>
-
+                <li class="breadcrumb-item active" aria-current="page">{{object.title}} Detail</li>
+            </ol>
+        </nav>
     </div>
-    <div class="col-md-8 col-lg-9">
-        <div class="dash-left">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="widget-info margin-top-large">
-                        <div class="widget-head">
-                            <h4><a href="#" title="">Materials &nbsp</a></h4>
-                            <a href="{% url 'core:material_delete' object.id %}" title=""><h4>Delete</h4></a>
-                            <a href="{% url 'core:material_update' object.id %}" title=""><h4>Edit &nbsp</h4></a>
 
-                        </div>
-                        <div class="widget-body">
-                            {% if object.title %}
+</div>
+<div class="col-md-8 col-lg-9">
+    <div class="dash-left">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="widget-info margin-top-large">
+                    <div class="widget-head">
+                        <h4><a href="#" title="">Materials &nbsp</a></h4>
+                        <a href="{% url 'core:material_delete' object.id %}" title=""
+                           class="btn btn-sm btn-xs btn-primary"><i
+                                class="la la-caret-right"></i> Delete</a>
+                        <a href="{% url 'core:material_update' object.id %}" title=""
+                           class="btn btn-sm btn-xs btn-primary"><i
+                                class="la la-caret-right"></i> Edit</a>
+                    </div>
+                    <div class="widget-body">
+                        {% if object.title %}
 
-                                <h5>Name</h5><br>
-                                {{ object.title }}
-                                </p><br>{% endif %}{% if object.organization %}
-                            <p>
-                            <h5>Organization</h5><br>
-                            <p>
-                                {{ object.organization }}
-                            </p><br>{% endif %}
-                            <h5>Good Photo</h5><br>{% if object.good_photo %}
-                            <p>
-                                <img src="{{ MEDIA_URL }}{{ object.good_photo }}">
-                            </p><br>{% endif %}
-                            <h5>Bad Photo</h5><br>{% if object.bad_photo %}
-                            <p>
-                                <img src="{{ MEDIA_URL }}{{ object.bad_photo }}">
-                            </p><br>{% endif %}{% if  object.description %}
-                            <h5>Description</h5><br>
-                            <p>
-                                {{ object.description }}
-                            </p><br>
+                        <h5>Name</h5><br>
+                        {{ object.title }}
+                        </p><br>{% endif %}{% if object.organization %}
+                        <p>
+                        <h5>Organization</h5><br>
+                        <p>
+                            {{ object.organization }}
+                        </p><br>{% endif %}
+                        <h5>Good Photo</h5><br>{% if object.good_photo %}
+                        <p>
+                            <img src="{{ MEDIA_URL }}{{ object.good_photo }}">
+                        </p><br>{% endif %}
+                        <h5>Bad Photo</h5><br>{% if object.bad_photo %}
+                        <p>
+                            <img src="{{ MEDIA_URL }}{{ object.bad_photo }}">
+                        </p><br>{% endif %}{% if object.description %}
+                        <h5>Description</h5><br>
+                        <p>
+                            {{ object.description }}
+                        </p><br>
                         {% endif %}
-                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-    </div>
+</div>
 {% endblock content %}
