Design and navigation

--- a/survey/core/templates/core/sitedocument_list.html
+++ b/survey/core/templates/core/sitedocument_list.html
@@ -13,7 +13,7 @@
     <div class="d-flex justify-content-center">
         <div class="col-md-3 col-lg-8"> <a href="{% url 'core:document_create' site.pk %}" title=""
                                    class="btn btn-sm btn-xs btn-primary"><i
-                                        class="la la-caret-right"></i> Add Documents</a></p>
+                                        class="la la-plus"></i> Add Documents</a></p>
             <div class="dash-right">
                 <div class="widget-info margin-top-large">
                     <table id="gallery" class="table table-bordered">
