--- a/survey/core/templates/core/material_detail.html
+++ b/survey/core/templates/core/material_detail.html
@@ -24,9 +24,8 @@
                     <div class="widget-info margin-top-large">
                         <div class="widget-head">
                             <h4><a href="#" title="">Materials &nbsp</a></h4>
-                            <a href="{% url 'core:material_delete' object.id %}" title=""><h4>Delete</h4></a>
-                            <a href="{% url 'core:material_update' object.id %}" title=""><h4>Edit &nbsp</h4></a>
-
+                            <a href="{% url 'core:material_delete' object.id %}" title="" class="btn btn-sm btn-xs btn-primary"><i class="la la-delete"></i>Delete</a>
+                            <a href="{% url 'core:material_update' object.id %}" title="" class="btn btn-sm btn-xs btn-primary"><i class="la la-edit"></i>Edit &nbsp</a>
                         </div>
                         <div class="widget-body">
                             {% if object.title %}
