--- a/survey/core/templates/core/site_create.html
+++ b/survey/core/templates/core/site_create.html
@@ -11,7 +11,7 @@
                     <li class="breadcrumb-item"><a href="{% url 'core:site_detail' object.pk %}">{{ object }}</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Edit {{ object }}</li>
                     {% else %}
-                    <li class="breadcrumb-item active" aria-current="page">Site Form</li>
+                    <li class="breadcrumb-item active" aria-current="page">New Site</li>
                     {% endif %}
                     {% else %}
                     <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a></li>
@@ -19,7 +19,7 @@
                     <li class="breadcrumb-item"><a href="{% url 'core:site_detail' object.pk %}">{{ object }}</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Edit {{ object }}</li>
                     {% else %}
-                    <li class="breadcrumb-item active" aria-current="page">Site Form</li>{% endif %}
+                    <li class="breadcrumb-item active" aria-current="page">New Site</li>{% endif %}
                     {% endif %}
                 </ol>
             </nav>
