--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -265,7 +265,7 @@
 </script>
 <script>
         function myMap() {
-          var myCenter = new google.maps.LatLng(28.3949,84.1240);
+          var myCenter = new google.maps.LatLng(12.8797, 121.7740);
           var mapCanvas = document.getElementById("school-map");
           var mapOptions = {center: myCenter, zoom: 5};
           var map = new google.maps.Map(mapCanvas, mapOptions);
